# stunt

./: .gitignore  AGENTS.md  Cargo.toml  README.md  release.sh
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: install-linux.md  install-macos.md  install-windows.md
openspec/changes/archive/2026-02-19-ssh-tunnel-manager/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-19-ssh-tunnel-manager/specs/tui-list-view/: spec.md
openspec/changes/archive/2026-02-19-ssh-tunnel-manager/specs/tunnel-config/: spec.md
openspec/changes/archive/2026-02-19-ssh-tunnel-manager/specs/tunnel-lifecycle/: spec.md
openspec/changes/persistent-connections/: design.md  proposal.md  tasks.md
openspec/changes/persistent-connections/specs/session-persistence/: spec.md
openspec/specs/tui-list-view/: spec.md
openspec/specs/tunnel-config/: spec.md
openspec/specs/tunnel-lifecycle/: spec.md
src/: app.rs  demo.rs  main.rs
src/config/: mod.rs  model.rs  session.rs  storage.rs
src/event/: mod.rs
src/tunnel/: command.rs  mod.rs  output.rs  pid.rs  state.rs  supervisor.rs
src/ui/: mod.rs
