[package]
name = "tunnel-mgr"
version = "0.1.0"
edition = "2024"
description = "A TUI for managing SSH tunnel connections"

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6"
futures = "0.3"
libc = "0.2"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
