[package]
name = "stunt"
version = "0.4.0"
edition = "2024"
description = "STunT - Stupid Tunnel Tricks: A TUI for managing SSH tunnel connections"
license = "MIT"
repository = "https://github.com/keathmilligan/stunt"
keywords = ["cli", "ssh", "tunnel", "tui", "network"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "stunt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6"
futures = "0.3"
rand = "0.10.0"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[profile.release]
lto = true
strip = true
